BuildHughes/translation-tool/inputs/source_meta/objects/HSVC_Limit_Config__c.object
<CustomObject>
    <fields>
        <fullName>Calculate_From__c</fullName>
        <label>Calculate From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Created Date</fullName>
                    <default>true</default>
                    <label>Created Date</label>
                </value>
                <value>
                    <fullName>Start of Fiscal Quarter</fullName>
                </value>
                <value>
                    <fullName>Start of Month</fullName>
                </value>
                <value>
                    <fullName>Start of Quarter</fullName>
                </value>
                <value>
                    <fullName>Start of Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Days_Months__c</fullName>
        <label>Number Of Days/Months</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Period__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Occurrences__c</fullName>
        <label>Number of Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <label>Number of Days/Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Due Date Change</fullName>
                </value>
                <value>
                    <fullName>Fap Purchase</fullName>
                </value>
                <value>
                    <fullName>Lock Transaction</fullName>
                </value>
                <value>
                    <fullName>Reactivate Transaction</fullName>
                </value>
                <value>
                    <fullName>Reissue Invoice</fullName>
                </value>
                <value>
                    <fullName>Service Upgrade</fullName>
                </value>
                <value>
                    <fullName>Exemption Expiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Limit Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Number_Of_Occurrences__c</columns>
        <columns>Calculate_From__c</columns>
        <columns>Period__c</columns>
        <columns>Number_of_Months__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limit Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>